# CHR

./: LICENSE  chr.cabal  constraint-solver.cabal  flake.nix  format-haskell-code.sh
src/CHR/: IndexedSet.hs  Partial.hs  Unify.hs
src/CS/: IndexedSet.hs  Partial.hs  Unify.hs
test/: Main.hs
